--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html>    
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <div class="comment-wrapper" style="padding: 30px 40px;">
     <div class="container">
       <div class="heading">
-        <h2>Apa kata mereka?</h2>
+        <h2>Comment</h2>
       </div>
         <div class="comment" style="width: 25%; float: center; padding: 30px 0;">
           <div class="comment-icon" style="float: left;">
@@ -34,5 +35,11 @@
         <h3>Siap untuk menonton?</h3>
       </div>
       <span class="btn message" style="padding: 15px 40px; background-color: #5dca88; cursor: pointer;" >Pilih Film</span>
+      <div class="cntc-wrapper" style="float:right;  margin-right:50px;">
+      <p style="padding: 15px 30px; background-color: red; margin-bottom:50px;">Contact Us</p>
+      <a href="#" class="cntc wa" style="padding: 15px 40px; background-color: #5dca88; cursor: pointer;"><span class="fa fa-whatsapp" style="padding: 0 10px;"></span>WhatsApp</a>
+      <p style="margin: 30px 50px;">atau</p>
+      <a href="#" class="cntc email" style="padding: 15px 30px; background-color: #5dca88; cursor: pointer;"><span class="fa fa-chrome"  style="padding: 0 10px;"></span>E-mail</a>
+      </div>
     </div>
   </div>
