--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
       <span class="btn message" style="padding: 15px 40px; background-color: #5dca88; cursor: pointer; float: center;" >Pilih Film</span>
       <div class="cntc-wrapper" style="float:right;  margin-right:50px;">
       <p style="padding: 15px 30px; background-color: red; margin-bottom:50px;">Contact Us</p>
-      <a href="#" class="cntc wa" style="padding: 15px 40px; background-color: #5dca88; cursor: pointer;"><span class="fa fa-whatsapp" style="padding: 0 10px;"></span>WhatsApp</a>
+      <a href="#" class="cntc mail" style="padding: 15px 40px; background-color: #5dca88; cursor: pointer;">E-mail</a>
       <p style="margin: 30px 50px;">or</p>
-      <a href="#" class="cntc email" style="padding: 15px 30px; background-color: #5dca88; cursor: pointer;"><span class="fa fa-chrome"  style="padding: 0 10px;"></span>E-mail</a>
+      <a href="#" class="cntc wa" style="padding: 15px 30px; background-color: #5dca88; cursor: pointer;"><span class="fa fa-whatsapp"  style="padding: 0 10px;"></span>WhatsApp</a>
       </div>
     </div>
   </div>
