--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </div>
   </div>
-  <div class="message-wrapper" style="text-align: center; padding: 180px 0 100px 0; background-image: url(logoD20.png); background-size: cover;">
+  <div class="message-wrapper" style="text-align: center; padding: 180px 0 100px 0; background-image: url(logoD20.png); background-size: cover; opacity: 0.5;">
     <div class="container">
       <div class="heading" style="font-size: 30px; padding: 40px 0;">
         <h2>Keep Beauty, Movie and Happy</h2>
