--- a/index.html
+++ b/index.html
@@ -1,45 +1,64 @@
 <!DOCTYPE html>
-<html>    
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<div class="comment-wrapper" style="padding: 30px 40px;">
-    <div class="container">
-      <div class="heading">
-        <h2>Comment</h2>
-      </div>
-        <div class="comment" style="width: 25%; float: center; padding: 30px 0;">
-          <div class="comment-icon" style="float: left;">
-          <p style="text-align:justify; font-size:25px;"><img src="sudrajat.jpg" style="float:left; width: 70px; height: 70px; margin:0 9px 3px 0;"/>Muhammad Sudrajat ~ "Sangat menyenangkan menonton film disini, kualitas terbaik"</p>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Progate</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  </head>
+  <div class="comment-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h2>Comment</h2>
+        </div>
+        <div class="comments">
+          <div class="comment">
+            <div class="comment-icon">
+              <img src="sudrajat.jpg">
+               <p>Muhammad Sudrajat</p>
+            </div>
+             <p class="text-contents">"Sangat menyenangkan menonton film disini, kualitas terbaik"</p>
           </div>
-        </div>
-        <div class="comment" style="width: 25%; float: center;">
-          <div class="comment-icon" style="float: left;">
-          <p style="text-align:justify; font-size:25px;"><img src="Rendi.jpg" style="float:left; width: 70px; height: 70px; margin:0 9px 3px 0;"/>Rendi Restiandi ~ "Situs film terlengkap dan terupdate!!!"</p>
-         </div>
-        </div>
-        <div class="comment" style="width: 25%; float: center;">
-          <div class="comment-icon" style="float: left;">
-          <p style="text-align:justify; font-size:25px;"><img src="Rifa.jpg" style="float:left; width: 70px; height: 70px; margin:0 9px 3px 0;"/>Rifa ~ "Suka banget nonton film disini, apalagi bareng keluarga"</p>
-        </div>
-        </div>
-        <div class="comment" style="width: 25%; float: center;">
-          <div class="comment-icon" style="float: left;">
-          <p style="text-align:justify; font-size:25px;"><img src="Nurul.jpg" style="float:left; width: 70px; height: 70px; margin:0 9px 3px 0;"/>Nurul Fadhillah ~ "Apa cuma aku yang nangis nonton film romance disini?"</p>
+          <div class="comment">
+            <div class="comment-icon">
+              <img src="Rendi.jpg">
+              <p>Rendi Restiandi</p>
+            </div>
+            <p class="text-contents">"Situs film terlengkap dan terupdate!!!"</p>
           </div>
+          <div class="comment">
+            <div class="comment-icon">
+              <img src="Rifa.jpg">
+              <p>Rifa</p>
+            </div>
+            <p class="text-contents">"Suka banget nonton film disini, apalagi bareng keluarga"</p>
+          </div>
+          <div class="comment">
+            <div class="comment-icon">
+              <img src="Nurul.jpg">
+              <p>Nurul Fadhillah</p>
+            </div>
+            <p class="text-contents">"Apa cuma aku yang nangis nonton film romance disini?"</p>
+          </div>
+          <div class="clear"></div>
         </div>
-    </div>
-  </div>
-  <div class="message-wrapper" style="text-align: center; padding: 180px 0 100px 0; background-image: url(logoD20.png); background-size: cover; opacity: 0.5;">
-    <div class="container">
-      <div class="heading" style="font-size: 30px; padding: 40px 0;">
-        <h2>Keep Beauty, Movie and Happy</h2>
-        <h3>Siap untuk menonton?</h3>
-      </div>
-      <span class="btn message" style="padding: 15px 40px; background-color: #5dca88; cursor: pointer; float: center;" >Pilih Film</span>
-      <div class="cntc-wrapper" style="float:right;  margin-right:50px;">
-      <p style="padding: 15px 30px; background-color: red; margin-bottom:50px;">Contact Us</p>
-      <a href="#" class="cntc mail" style="padding: 15px 40px; background-color: #5dca88; cursor: pointer;">E-mail</a>
-      <p style="margin: 30px 50px;">or</p>
-      <a href="#" class="cntc wa" style="padding: 15px 30px; background-color: #5dca88; cursor: pointer;"><span class="fa fa-whatsapp"  style="padding: 0 10px;"></span>WhatsApp</a>
       </div>
     </div>
-  </div>
+    <div class="message-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h2>Keep Beauty, Movie and Happy</h2>
+          <h3>Siap untuk menonton Film?</h3>
+        </div>
+        <span class="btn message">Pilih Film</span>
+        <div class="cntc-wrapper">
+         <h3>Contact Us</h3>
+         <a href="#" class="cntc mail">E-mail</a>
+         <p>or</p>
+         <a href="#" class="cntc wa"><span class="fa fa-whatsapp"></span>WhatsApp</a>
+        </div>
+      </div>
+    </div>
+    
